@@ -1,0 +1,2 @@
+base:
+  user: configuser
