@@ -28,6 +28,7 @@ Revision history for Rex
  - Report coverage to Coveralls
  - Add initial test for proc inventory
  - Test custom template functions
+ - Add initial config file tests
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
